@@ -1,3 +1,5 @@
+- Added support for "and" lines to mailrules plugin.
+
 - Modified rbl plugin to log all responses in a single line.
 
 - Fixed minor memory leak in the rbl plugin.
